fix horizontal scrollbar bug

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -38,4 +38,5 @@ h3 {
 
 .dashboard-deck {
   min-height: 60vh;
+  width: 100%;
 }
